Fix open and close modal not working as expected

--- a/deskover-dashboard-website/src/app/modules/main/header/notifications/notifications.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/notifications/notifications.component.html
@@ -7,18 +7,18 @@
         <span class="dropdown-item dropdown-header">15 Notifications</span>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item">
-            <i class="fas fa-envelope mr-2"></i> 4 new messages
-            <span class="float-right text-muted text-sm">3 mins</span>
+            <i class="fas fa-envelope me-2"></i> 4 new messages
+            <span class="float-end text-muted text-sm">3 mins</span>
         </a>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item">
-            <i class="fas fa-users mr-2"></i> 8 friend requests
-            <span class="float-right text-muted text-sm">12 hours</span>
+            <i class="fas fa-users me-2"></i> 8 friend requests
+            <span class="float-end text-muted text-sm">12 hours</span>
         </a>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item">
-            <i class="fas fa-file mr-2"></i> 3 new reports
-            <span class="float-right text-muted text-sm">2 days</span>
+            <i class="fas fa-file me-2"></i> 3 new reports
+            <span class="float-end text-muted text-sm">2 days</span>
         </a>
         <div class="dropdown-divider"></div>
         <a href="#" class="dropdown-item dropdown-footer"
@@ -29,8 +29,8 @@
 
 <ng-template #notification>
     <a href="#" class="dropdown-item">
-        <i class="fas fa-envelope mr-2"></i> 4 new messages
-        <span class="float-right text-muted text-sm">3 mins</span>
+        <i class="fas fa-envelope me-2"></i> 4 new messages
+        <span class="float-end text-muted text-sm">3 mins</span>
     </a>
     <div class="dropdown-divider"></div>
 </ng-template>
