--- a/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/user/user.component.html
@@ -6,7 +6,7 @@
       alt="User Image"
     />-->
     <div class="d-flex">
-      <div class="image mr-2">
+      <div class="image me-2">
         <img
           [src]="'assets/img/avatar/default-profile.png'"
           class="user-image img-circle elevation-2"
@@ -53,7 +53,7 @@
       <!-- <a [routerLink]="['/profile']" class="btn btn-default btn-flat">
           Hồ sơ
       </a> -->
-      <a (click)="logout()" class="btn btn-default btn-flat float-right w-100"
+      <a (click)="logout()" class="btn btn-default btn-flat float-end w-100"
       >Đăng xuất</a
       >
     </li>
