--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -20,78 +20,74 @@
     <div class="card">
       <div class="card-header">
         <div class="row">
-          <label for="filter-category" class="col-lg-auto col-form-label">Trạng thái</label>
+          <label for="filter-category" class="col-auto col-form-label">Trạng thái</label>
           <select id="filter-category" class="custom-select col-6 col-md-2" [(ngModel)]="isActive"
                   (change)="filter()">
             <option [ngValue]="true">Hoạt động</option>
             <option [ngValue]="false">Chưa kích hoạt</option>
           </select>
-          <div class="col"></div>
-          <div class="col-auto d-flex align-items-center">
-            <button type="button" class="btn btn-sm bg-faded-accent w-sm-100" (click)="newCategory()" placement="left"
-                    ngbTooltip="Thêm">
+          <div class="col d-flex align-items-center justify-content-end">
+            <button type="button" class="btn btn-sm bg-faded-accent" (click)="newCategory()" placement="left"
+                    tooltip="Thêm"> <!-- or ngbTooltip="Thêm" -->
               <i class="fas fa-plus text-accent"></i>
             </button>
           </div>
         </div>
       </div>
       <div class="card-body p-0">
-        <div class="table-responsive p-3">
-          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-            <thead class="table-light">
-            <tr>
-              <th scope="col" class="align-middle">Tên</th>
-              <th scope="col" class="align-middle">Slug</th>
-              <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
-              <th scope="col" class="align-middle text-center">Người cập nhật</th>
-              <!--<th scope="col" class="align-middle text-center">Trạng thái</th>-->
-              <th scope="col" class="align-middle text-center">Công cụ</th>
-            </tr>
-            </thead>
-            <tbody *ngIf="categories?.length !== 0">
-            <tr *ngFor="let item of categories; let i = index">
-              <td class="align-middle">
-                {{ item.name }}
-              </td>
-              <td class="align-middle">
-                {{ item.slug }}
-              </td>
-              <td class="align-middle text-center">
-                {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
-              </td>
-              <td class="align-middle text-center">
-                {{ item.modifiedUser }}
-              </td>
-              <!--<td class="align-middle text-center">
-                <span *ngIf="item.actived" class="badge bg-success">Kích hoạt</span>
-                <span *ngIf="!item.actived" class="badge bg-danger">Vô hiệu hoá</span>
-              </td>-->
-              <td class="align-middle text-center">
-                <div *ngIf="isActive">
-                  <button type="button" class="btn btn-sm bg-faded-info mr-md-2" placement="top" ngbTooltip="Sửa"
-                          (click)="getCategory(item.id)">
-                    <i class="fas fa-pen-square text-info"></i>
-                  </button>
-                  <button type="button" class="btn btn-sm bg-faded-danger" (click)="deleteCategory(item.id)"
-                          placement="top" ngbTooltip="Xoá" container="body">
-                    <i class="fas fa-trash text-danger"></i>
-                  </button>
-                </div>
-                <div *ngIf="!isActive">
-                  <button type="button" class="btn btn-sm bg-success"
-                          (click)="activeCategory(item.id)">
-                    Kích hoạt
-                  </button>
-                </div>
-              </td>
-            </tr>
-            </tbody>
-            <tbody *ngIf="categories?.length === 0">
-            <tr>
-              <td colspan="5" class="text-center">Không tìm thấy kết quá</td>
-            </tr>
-            </tbody>
-          </table>
+        <div class="table-responsive">
+          <div class="p-3">
+            <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
+              <thead class="table-light">
+              <tr>
+                <th scope="col" class="align-middle">Tên</th>
+                <th scope="col" class="align-middle">Slug</th>
+                <th scope="col" class="align-middle text-center">Ngày cập nhật</th>
+                <th scope="col" class="align-middle text-center">Người cập nhật</th>
+                <th scope="col" class="align-middle text-center">Công cụ</th>
+              </tr>
+              </thead>
+              <tbody *ngIf="categories?.length !== 0">
+              <tr *ngFor="let item of categories; let i = index">
+                <td class="align-middle">
+                  {{ item.name }}
+                </td>
+                <td class="align-middle">
+                  {{ item.slug }}
+                </td>
+                <td class="align-middle text-center">
+                  {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
+                </td>
+                <td class="align-middle text-center">
+                  {{ item.modifiedUser }}
+                </td>
+                <td class="align-middle text-center">
+                  <div *ngIf="isActive">
+                    <button type="button" class="btn btn-sm bg-faded-info me-0 me-md-2 mb-2 mb-md-0" placement="top"
+                            tooltip="Sửa" (click)="getCategory(item.id)">
+                      <i class="fas fa-pen-square text-info"></i>
+                    </button>
+                    <button type="button" class="btn btn-sm bg-faded-danger" (click)="deleteCategory(item.id)"
+                            placement="top" tooltip="Xoá" container="body">
+                      <i class="fas fa-trash text-danger"></i>
+                    </button>
+                  </div>
+                  <div *ngIf="!isActive">
+                    <button type="button" class="btn btn-sm bg-success"
+                            (click)="activeCategory(item.id)">
+                      Kích hoạt
+                    </button>
+                  </div>
+                </td>
+              </tr>
+              </tbody>
+              <tbody *ngIf="categories?.length === 0">
+              <tr>
+                <td colspan="5" class="text-center">Không tìm thấy kết quá</td>
+              </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
@@ -115,7 +111,7 @@
     <form #categoryForm="ngForm">
       <div class="row">
         <div class="col-6">
-          <div class="form-group">
+          <div class=" mb-3">
             <label class="form-label" for="name">Tên</label>
             <input
               type="text"
@@ -133,7 +129,7 @@
           </div>
         </div>
         <div class="col-6">
-          <div class="form-group">
+          <div class=" mb-3">
             <label class="form-label" for="slug">Slug</label>
             <input
               type="text"
