--- a/deskover-dashboard-website/src/app/components/button/button.component.html
+++ b/deskover-dashboard-website/src/app/components/button/button.component.html
@@ -4,7 +4,7 @@
     [ngClass]="{'btn-block': block}"
     [disabled]="disabled || loading"
 >
-    <i *ngIf="!!icon" class="mr-2" [ngClass]="icons[icon]"></i>
+    <i *ngIf="!!icon" class="me-2" [ngClass]="icons[icon]"></i>
     <ng-content></ng-content>
     <span
         *ngIf="loading"
