--- a/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="float-right d-none d-sm-block">
+<div class="float-end d-none d-sm-block">
     <b>Phiên bản</b> {{ appVersion }}
 </div>
 <div class="d-block d-lg-none">
