--- a/deskover-dashboard-website/src/app/modules/main/header/header.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/header.component.html
@@ -12,7 +12,7 @@
   </li> -->
 </ul>
 
-<form class="form-inline ml-3" [formGroup]="searchForm" *ngIf="false">
+<form class="form-inline ms-3" [formGroup]="searchForm" *ngIf="false">
   <div class="input-group input-group-sm">
     <input
       class="form-control form-control-navbar"
@@ -26,7 +26,7 @@
   </div>
 </form>
 
-<ul class="navbar-nav ml-auto">
+<ul class="navbar-nav ms-auto">
   <!-- <app-messages></app-messages> -->
   <!-- <app-notifications></app-notifications> -->
   <!-- <  app-language></> -->
