--- a/deskover-dashboard-website/src/app/modules/main/header/language/language.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/header/language/language.component.html
@@ -4,10 +4,10 @@
     </ng-container>
     <ng-container dropdown-menu>
         <a href="#" class="dropdown-item active">
-            <i class="flag-icon flag-icon-vn mr-2"></i> Tiếng Việt
+            <i class="flag-icon flag-icon-vn me-2"></i> Tiếng Việt
         </a>
         <a href="#" class="dropdown-item">
-            <i class="flag-icon flag-icon-us mr-2"></i> English
+            <i class="flag-icon flag-icon-us me-2"></i> English
         </a>
     </ng-container>
 </app-dropdown>
