--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -17,7 +17,7 @@
 </section>
 <section class="content">
   <div class="container-fluid">
-    <div class="card">
+    <div class="card border-primary">
       <div class="card-header">
         <div class="row">
           <label for="filter-category" class="col-auto col-form-label">Trạng thái</label>
@@ -38,7 +38,7 @@
         <div class="table-responsive">
           <div class="p-3">
             <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-              <thead class="table-light">
+              <thead class="table-primary">
               <tr>
                 <th scope="col" class="align-middle">Tên</th>
                 <th scope="col" class="align-middle">Slug</th>
