--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -17,7 +17,7 @@
 </section>
 <section class="content">
   <div class="container-fluid">
-    <div class="card">
+    <div class="card border-primary">
       <div class="card-header">
         <div class="row">
           <label for="filter-brand" class="col-auto col-form-label">Trạng thái</label>
@@ -34,9 +34,9 @@
           </div>
         </div>
       </div>
-      <div class="card-body  p-3">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-          <thead class="table-light"></thead>
+      <div class="card-body p-3">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm">
+          <thead class="table-primary"></thead>
           <tbody></tbody>
         </table>
       </div>
