--- a/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/subcategory/subcategory.component.html
@@ -17,7 +17,7 @@
 </section>
 <section class="content">
   <div class="container-fluid">
-    <div class="card">
+    <div class="card border-primary">
       <div class="card-header">
         <div class="row">
           <label for="filter-subcategory" class="col-auto col-form-label">Trạng thái</label>
@@ -37,7 +37,7 @@
 
       <div class="card-body p-3">
         <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-sm">
-          <thead class="table-light"></thead>
+          <thead class="table-primary"></thead>
           <tbody></tbody>
         </table>
       </div>
