Add promotion component

--- a/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
+++ b/deskover-dashboard-website/src/app/modules/main/footer/footer.component.html
@@ -4,7 +4,7 @@
 <div class="d-block d-lg-none">
   <strong>
     <span>Copyright &copy; {{ currentYear }} </span>
-    <a href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
+    <a class="link-primary text-decoration-none" href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
     <span>. </span>
   </strong>
   <span>Đã đăng ký bản quyền.</span>
@@ -12,7 +12,7 @@
 <div class="d-none d-lg-block">
   <strong>
     <span>Nhóm </span>
-    <a href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
+    <a class="link-primary text-decoration-none" href="#" target="_blank" rel="noopener noreferrer" style="margin: 0">Pikalong</a>
     <span>: Nguyễn Hoài Minh, Phạm Văn Hải, Phạm Quang Vũ, Nguyễn Quang Huy, Bùi Đức Minh.</span>
   </strong>
   <span></span>
