fix datetimepicker not working

--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -52,7 +52,7 @@
 <ng-template #brandModal let-c="close" let-d="dismiss">
   <div class="modal-header">
     <h4 class="modal-title text-danger" id="modal-basic-title">
-      {{ isEdit ? 'Sửa' : 'Thêm' }} thương hiệu
+      {{ isEdit ? 'Cập nhật' : 'Thêm' }} thương hiệu
     </h4>
     <button
       type="button"
