--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -99,7 +99,7 @@
 <ng-template #categoryModal let-c="close" let-d="dismiss">
   <div class="modal-header">
     <h4 class="modal-title text-danger" id="modal-basic-title">
-      {{ isEdit ? 'Sửa' : 'Thêm' }} danh mục
+      {{ isEdit ? 'Cập nhật' : 'Thêm' }} danh mục
     </h4>
     <button
       type="button"
