--- a/deskover-dashboard-website/src/app/pages/category/category.component.html
+++ b/deskover-dashboard-website/src/app/pages/category/category.component.html
@@ -62,7 +62,7 @@
                   {{ item.modifiedAt | date: 'dd/MM/yyyy' }}
                 </td>
                 <td class="align-middle text-center">
-                  {{ item.modifiedUser }}
+                  {{ item.modifiedBy }}
                 </td>
                 <td class="align-middle text-end">
                   <div *ngIf="isActive">
