--- a/deskover-dashboard-website/src/app/pages/brand/brand.component.html
+++ b/deskover-dashboard-website/src/app/pages/brand/brand.component.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="card-body p-3">
-        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-hover table-sm w-100">
+        <table datatable [dtOptions]="dtOptions" class="table table-hover table-sm w-100">
           <thead class="table-primary"></thead>
           <tbody></tbody>
         </table>
